# vimanam

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  markdown.rs  models.rs  parser.rs  utils.rs
tests/: cli.rs
tests/fixtures/: petstore_oas2.json  petstore_oas3.json
