[package]
name = "vimanam"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Narayan SS <nrynss@users.noreply.github.com>"]
description = "OpenAPI to Markdown documentation generator"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nrynss/vimanam"

[dependencies]
# Command line argument parsing
clap = { version = "4.6", features = ["derive"] }

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Insertion-order-preserving maps for deterministic output
indexmap = { version = "2.14", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# Testing
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"
